@@ -1,6 +1,9 @@
-;<!-- $Id: upgrading.html,v 1.1.2.1 2010-08-26 19:00:51 dereine Exp $ -->
+;<!-- $Id: upgrading.html,v 1.1.2.2 2010-11-27 20:12:58 dereine Exp $ -->
 
 <h3>Updating templates</h3>
 If you have theme files for node-view-$viewname of comment-view-$viewname you have
 to convert them to node--view--$viewname or comment--view--$viewname.
 
+<h4>Updating table templates</h4>
+The class variable was renamed to $classes. Additional if you want to add 
+classes, you should add it to $classes_array and drupal will automatically convert it to the $classes string.
